--- a/product/tsconfig.json
+++ b/product/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "downlevelIteration": true,
     "paths": {
       "@/*": [
         "./*"
@@ -13,5 +14,11 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    ".expo",
+    "dist",
+    "web-build"
   ]
 }
